--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,10 @@ body {
 .color_white {
     color: rgb(255, 255, 255);
 }
+.color_title{
+    color: rgb(165, 0, 0);
+    text-decoration: underline;
+}
 
 /*fondos*/
 
@@ -61,7 +65,10 @@ body {
     animation: color 2s infinite alternate linear;
     font-size: 2.5rem;
 }
-
+.dropdown-item:focus{
+    background-color: rgb(197, 197, 197);
+    color: rgb(0, 0, 0);
+}
 /*main Index*/
 .novedades {
     width: 90%;
@@ -98,24 +105,29 @@ body {
 .row_gap{
     row-gap: 1rem;
 }
-.btn_menu{
-    border-radius: 10px;
-    padding: 10px;
-    color: rgb(255, 255, 255);
-    background-color: rgb(194, 2, 2);
-    text-decoration: none;
-}
+
 .btn_menu:hover{
     color: #292929;
 }
-
-
+.set_menu{
+    scroll-margin-top: 11em;
+}
+/*Delivery*/
+.btn_delivery{
+    border-radius: 10px;
+    padding: 10px;
+    text-decoration: none;
+    background-color: rgb(214, 8, 8);
+}
+.btn_delivery:focus{
+    color: rgb(145, 145, 145);
+}
 /*Opinion*/
 .bg_red{
     background-color: rgb(151, 0, 0);
-    border-radius: 10px;
+    border-radius: 5px;
 }
-.btn{
+.btn_opinion{
     background-color: white;
 }
 .btn:focus{
