--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,9 +19,10 @@ body {
     text-decoration: underline;
 }
 
-/*fondos*/
-
 /*nav*/
+nav div.offcanvas{
+    width: 200px;
+}
 .nav_shadow{
     box-shadow: 1px 1px 5px rgb(0, 0, 0);
 }
@@ -30,7 +31,7 @@ body {
 }
 
 .logo {
-    width: 10rem;
+    width: 5rem;
     height: auto;
     justify-content: space-evenly;
 }
@@ -61,7 +62,17 @@ body {
     color: rgb(94, 94, 94);
     border-left:3px solid white ;
 }
+.nav_titleDesktop{
+    display: none;
+    font-style: italic;
+    text-decoration: underline;
+    animation: color 2s infinite alternate linear;
+    font-size: 4rem;
+}
 .nav_title {
+    
+    text-decoration: underline;
+    font-style: italic;
     animation: color 2s infinite alternate linear;
     font-size: 2.5rem;
 }
@@ -105,23 +116,40 @@ body {
 .row_gap{
     row-gap: 1rem;
 }
-
+.cards_menu div div.card{
+    height: 25rem;
+}
+.cards_menu div div.card img{
+    height: 70%;
+}
+.cards_menu div div.card div{
+    height: 30%;
+}
 .btn_menu:hover{
     color: #292929;
 }
 .set_menu{
-    scroll-margin-top: 11em;
-
+    scroll-margin-top: 8rem;
 }
 /*Delivery*/
+.cards_deli div div.card{
+    height:15rem;
+}
+.container_text{
+    height: 60%;
+}
+
 .btn_delivery{
     border-radius: 10px;
     padding: 10px;
     text-decoration: none;
-    background-color: rgb(214, 8, 8);
+    background-color: #B3000B;
 }
 .btn_delivery:focus{
-    color: rgb(145, 145, 145);
+    color: #FFFFFF;
+}
+.precio{
+    font-size: 2rem;
 }
 /*Opinion*/
 .bg_red{
@@ -195,7 +223,25 @@ body {
 }
 
 @media screen and (min-width:576px) {
+    .logo {
+        width: 8rem;
+        height: auto;
+        justify-content: space-evenly;
+    }
+    .nav_titleDesktop{
+        display: inline-block;
 
+    }
+    .nav_title {
+        visibility: hidden;
+    }
+    nav div.offcanvas{
+        width: 350px;
+    }
+
+    .set_menu{
+        scroll-margin-top: 11rem;
+    }
     /*footer*/
     .redes {
         flex-direction: row;
