--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,251 +1,197 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Koulen&family=Odibee+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Koulen&family=Odibee+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 * {
-    font-family: 'Bebas Neue', cursive;
-}
+  font-family: 'Bebas Neue', cursive; }
 
 body {
-    background: url("../img/fondo/fondo4.jpg");
-}
+  background: url("../img/fondo/fondo4.jpg"); }
 
-/*colores*/
 .color_white {
-    color: rgb(255, 255, 255);
-}
-.color_title{
-    color: rgb(165, 0, 0);
-    text-decoration: underline;
-}
+  color: white; }
 
-/*nav*/
-nav div.offcanvas{
-    width: 200px;
-}
-.nav_shadow{
-    box-shadow: 1px 1px 5px rgb(0, 0, 0);
-}
+.color_title {
+  color: #a50000;
+  text-decoration: underline; }
+
+nav div.offcanvas {
+  width: 200px; }
+
+.nav_shadow {
+  box-shadow: 1px 1px 5px black; }
+
 .nav {
-    background: #292929;
-}
-
-.logo {
-    width: 5rem;
-    height: auto;
-    justify-content: space-evenly;
-}
-.center_icon{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-@keyframes color {
-    from {
-        color: rgb(92, 92, 92);
-    }
-
-    to {
-        color: rgb(255, 0, 0);
-    }
-}
-.offcanvas-body{
-    padding-left:0 ;
-}
-.nav-link{
-    color: white;
-}
-.nav-link:focus{
-    color: white;
-}
-.nav-link:hover{
-    color: rgb(94, 94, 94);
-    border-left:3px solid white ;
-}
-.nav_titleDesktop{
+  background: #292929; }
+  .nav-link {
+    color: white; }
+    .nav-link:focus {
+      color: white; }
+    .nav-link:hover {
+      color: #5e5e5e;
+      border-left: 3px solid white; }
+  .nav_titleDesktop {
     display: none;
     font-style: italic;
     text-decoration: underline;
     animation: color 2s infinite alternate linear;
-    font-size: 4rem;
-}
-.nav_title {
-    
+    font-size: 4rem; }
+  .nav_title {
     text-decoration: underline;
     font-style: italic;
     animation: color 2s infinite alternate linear;
-    font-size: 2.5rem;
-}
-.dropdown-item:focus{
-    background-color: rgb(197, 197, 197);
-    color: rgb(0, 0, 0);
-}
-/*main Index*/
+    font-size: 2.5rem; }
+
+.logo {
+  width: 5rem;
+  height: auto;
+  justify-content: space-evenly; }
+
+.center_icon {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+keyframes color {
+  color: #5c5c5c; }
+
+to {
+  color: red; }
+
+.offcanvas-body {
+  padding-left: 0; }
+
+.dropdown-item:focus {
+  background-color: #c5c5c5;
+  color: black; }
+
 .novedades {
-    width: 90%;
-}
+  width: 90%; }
 
 .container_deli {
-    background-color: rgb(224, 84, 42);
-    border-radius: 2rem;
-}
-.maxw_imgD{
-    max-width: 30rem;
-}
-.maxw_imgD div{
+  background-color: #e0542a;
+  border-radius: 2rem; }
+
+.maxw_imgD {
+  max-width: 30rem; }
+  .maxw_imgD div {
     display: flex;
-    justify-content: center;
-}
-.border{
-    border: 2px solid white;
-}
-.border:hover{
-    border: 2px solid red;
-}
-/*Sucursal*/
+    justify-content: center; }
+
+.border {
+  border: 2px solid white; }
+  .border:hover {
+    border: 2px solid red; }
+
 .bg-grey {
-    background-color: rgb(179, 179, 179);
-}
+  background-color: #b3b3b3; }
 
 .maps {
-    height: 400px;
-    width: 100%;
-}
+  height: 400px;
+  width: 100%; }
 
-/*Menu*/
-.row_gap{
-    row-gap: 1rem;
-}
-.cards_menu div div.card{
-    height: 25rem;
-}
-.cards_menu div div.card img{
-    height: 70%;
-}
-.cards_menu div div.card div{
-    height: 30%;
-}
-.btn_menu:hover{
-    color: #292929;
-}
-.set_menu{
-    scroll-margin-top: 8rem;
-}
-/*Delivery*/
-.cards_deli div div.card{
-    height:15rem;
-}
-.container_text{
-    height: 60%;
-}
+.row_gap {
+  row-gap: 1rem; }
 
-.btn_delivery{
-    border-radius: 10px;
-    padding: 10px;
-    text-decoration: none;
-    background-color: #B3000B;
-}
-.btn_delivery:focus{
-    color: #FFFFFF;
-}
-.precio{
-    font-size: 2rem;
-}
-/*Opinion*/
-.bg_red{
-    background-color: rgb(151, 0, 0);
-    border-radius: 5px;
-}
-.btn_opinion{
-    background-color: white;
-}
-.btn:focus{
-    box-shadow: none;
-}
-/*Footer*/
+.cards_menu div div.card {
+  height: 25rem; }
+  .cards_menu div div.card img {
+    height: 70%; }
+  .cards_menu div div.card div {
+    height: 30%; }
+
+.btn_menu:hover {
+  color: #292929; }
+
+.set_menu {
+  scroll-margin-top: 8rem; }
+
+.cards_deli div div.card {
+  height: 15rem; }
+
+.container_text {
+  height: 60%; }
+
+.btn_delivery {
+  border-radius: 10px;
+  padding: 10px;
+  text-decoration: none;
+  background-color: #a50000; }
+  .btn_delivery:focus {
+    color: white; }
+
+.precio {
+  font-size: 2rem; }
+
+.bg_red {
+  background-color: #a50000;
+  border-radius: 5px; }
+
+.btn_opinion {
+  background-color: white; }
+
+.btn:focus {
+  box-shadow: none; }
+
 .footer {
-    padding: 1rem 0;
-    background-color: #161616;
-    height: auto;
-}
-
-.footer_titulo {
+  padding: 1rem 0;
+  background-color: #161616;
+  height: auto; }
+  .footer_titulo {
     text-align: center;
-    color: rgb(255, 255, 255);
-}
-
-.footer_text {
+    color: white; }
+  .footer_text {
     text-align: center;
-    color: white;
-}
-
-.redes {
-    width: 60%;
-    max-width: 40rem;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.footer_redes {
+    color: white; }
+  .footer_redes {
     text-decoration: none;
     display: flex;
     align-items: center;
     gap: 1rem;
-    color: rgb(102, 102, 102);
+    color: #666666;
     padding: 0.5rem;
     border-radius: 1rem;
-    transition: background-color 1s, color 1s, box-shadow 0.5s;
-}
+    transition: background-color 1s, color 1s, box-shadow 0.5s; }
+  .footer_img {
+    width: 2rem;
+    display: inline-block; }
+
+.redes {
+  width: 60%;
+  max-width: 40rem;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 #insta:hover {
-    background-color: #E1306C;
-    color: white;
-    box-shadow: 0px 0px 20px #E1306C;
-}
+  background-color: #E1306C;
+  color: white;
+  box-shadow: 0px 0px 20px #E1306C; }
 
 #face:hover {
-    background-color: #2654af;
-    color: white;
-    box-shadow: 0px 0px 20px #2654af;
-}
+  background-color: #2654af;
+  color: white;
+  box-shadow: 0px 0px 20px #2654af; }
 
 #whatsapp:hover {
-    background-color: #049125;
-    color: white;
-    box-shadow: 0px 0px 20px #049125;
-}
+  background-color: #049125;
+  color: white;
+  box-shadow: 0px 0px 20px #049125; }
 
-.footer_img {
-    width: 2rem;
-    display: inline-block;
-}
-
-@media screen and (min-width:576px) {
-    .logo {
-        width: 8rem;
-        height: auto;
-        justify-content: space-evenly;
-    }
-    .nav_titleDesktop{
-        display: inline-block;
-
-    }
-    .nav_title {
-        visibility: hidden;
-    }
-    nav div.offcanvas{
-        width: 350px;
-    }
-
-    .set_menu{
-        scroll-margin-top: 11rem;
-    }
-    /*footer*/
-    .redes {
-        flex-direction: row;
-        justify-content: center;
-        gap: 3rem;
-    }
-}
+@media screen and (min-width: 576px) {
+  .logo {
+    width: 8rem;
+    height: auto;
+    justify-content: space-evenly; }
+  .nav_titleDesktop {
+    display: inline-block; }
+  .nav_title {
+    visibility: hidden; }
+  nav div.offcanvas {
+    width: 350px; }
+  .set_menu {
+    scroll-margin-top: 11rem; }
+  .redes {
+    flex-direction: row;
+    justify-content: center;
+    gap: 3rem; } }
