Seo y SASS 2 aplicados correctamente

--- a/scss/_delivery.scss
+++ b/scss/_delivery.scss
@@ -1,31 +1,28 @@
 /*Delivery*/
 .cards_deli div div.card {
     height: 15rem;
-}
-
-.container_text {
-    height: 60%;
-}
-
-.btn_delivery {
-    border-radius: 10px;
-    padding: 10px;
-    text-decoration: none;
-    background-color: $RojoPrincipal;
-
-    &:focus {
-        color: $Blanco;
+    .container_text {
+        height: 60%;
+    }
+    .btn_delivery {
+        border-radius: 10px;
+        padding: 10px;
+        text-decoration: none;
+        background-color: $RojoPrincipal;
+    
+        &:focus {
+            color: $Blanco;
+            box-shadow: none;
+        }
     }
 }
 
+.card-img-top{
+    max-height:20rem ;
+}
 .precio {
     font-size: 2rem;
 }
-
-.bg_red {
-    background-color: $RojoPrincipal;
-    border-radius: 5px;
-}
-.btn:focus {
-    box-shadow: none;
+.set_deli{
+    @extend .set_menu;
 }
