--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -5,16 +5,25 @@
 
 .cards_menu div div.card {
     height: 25rem;
-
+    align-items: center;
     img {
-        height: 70%;
+        height: 60%;
+        width: 100%;
+        max-width: 238px;
     }
 
     div {
-        height: 30%;
+        height: 40%;
     }
 }
 
 .set_menu {
     scroll-margin-top: 8rem;
+    padding: 2rem 0;
+    margin: 4rem auto;
+    @media screen and (min-width:576px) {
+        &{
+            scroll-margin-top: 11rem;
+        }
+    }
 }
