--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,22 +6,34 @@
 body {
   background: url("../img/fondo/fondo4.jpg"); }
 
+.color_title {
+  color: #a50000; }
+
+/*mixin footer*/
+/*Se creo un mixin para el footer*/
 /*Navbar*/
+/*Se uso un maps para modificar los colores del nav*/
 nav div.offcanvas {
   width: 200px; }
 
 .nav_shadow {
   box-shadow: 1px 1px 5px black; }
 
+.logo {
+  width: 5rem;
+  height: auto;
+  justify-content: space-evenly; }
+
 .nav {
   background: #292929; }
+  .nav .navbar-nav {
+    padding: 1rem; }
   .nav-link {
     color: white; }
     .nav-link:focus {
       color: white; }
     .nav-link:hover {
-      color: #5e5e5e;
-      border-left: 3px solid white; }
+      color: #5e5e5e; }
   .nav_titleDesktop {
     display: none;
     font-style: italic;
@@ -33,11 +45,6 @@ nav div.offcanvas {
     font-style: italic;
     animation: color 2s infinite alternate linear;
     font-size: 2.5rem; }
-
-.logo {
-  width: 5rem;
-  height: auto;
-  justify-content: space-evenly; }
 
 .center_icon {
   display: flex;
@@ -67,13 +74,11 @@ nav div.offcanvas {
   .nav_title {
     visibility: hidden; }
   nav div.offcanvas {
-    width: 350px; }
-  .set_menu {
-    scroll-margin-top: 11rem; } }
+    width: 350px; } }
 
 /*Index*/
 #header img {
-  height: 50vh; }
+  max-height: 60vh; }
 
 .novedades {
   width: 90%; }
@@ -81,6 +86,8 @@ nav div.offcanvas {
 .container_deli {
   background-color: #e0542a;
   border-radius: 2rem; }
+  .container_deli .card:hover {
+    border: 1px solid red; }
 
 .maxw_imgD {
   max-width: 30rem; }
@@ -88,16 +95,14 @@ nav div.offcanvas {
     display: flex;
     justify-content: center; }
 
-.border {
-  border: 2px solid white; }
-  .border:hover {
-    border: 2px solid red; }
-
-.bg-grey {
-  background-color: #b3b3b3; }
+.sucursal {
+  background-color: #8d8d8d;
+  border-radius: 1rem; }
 
 .maps {
-  height: 400px;
+  max-height: 400px;
+  min-height: 300px;
+  height: 100%;
   width: 100%; }
 
 /*Menu*/
@@ -105,43 +110,61 @@ nav div.offcanvas {
   row-gap: 1rem; }
 
 .cards_menu div div.card {
-  height: 25rem; }
+  height: 25rem;
+  align-items: center; }
   .cards_menu div div.card img {
-    height: 70%; }
+    height: 60%;
+    width: 100%;
+    max-width: 238px; }
   .cards_menu div div.card div {
-    height: 30%; }
+    height: 40%; }
 
-.set_menu {
-  scroll-margin-top: 8rem; }
+.set_menu, .set_deli {
+  scroll-margin-top: 8rem;
+  padding: 2rem 0;
+  margin: 4rem auto; }
+  @media screen and (min-width: 576px) {
+    .set_menu, .set_deli {
+      scroll-margin-top: 11rem; } }
 
 /*Delivery*/
 .cards_deli div div.card {
   height: 15rem; }
+  .cards_deli div div.card .container_text {
+    height: 60%; }
+  .cards_deli div div.card .btn_delivery {
+    border-radius: 10px;
+    padding: 10px;
+    text-decoration: none;
+    background-color: #a50000; }
+    .cards_deli div div.card .btn_delivery:focus {
+      color: white;
+      box-shadow: none; }
 
-.container_text {
-  height: 60%; }
-
-.btn_delivery {
-  border-radius: 10px;
-  padding: 10px;
-  text-decoration: none;
-  background-color: #a50000; }
-  .btn_delivery:focus {
-    color: white; }
+.card-img-top {
+  max-height: 20rem; }
 
 .precio {
   font-size: 2rem; }
 
-.bg_red {
-  background-color: #a50000;
-  border-radius: 5px; }
-
-.btn:focus {
-  box-shadow: none; }
-
 /*Opinion*/
+/*Se uso extend en un par de clases para hacer una modificacion en varios elementos*/
+.form_opinion {
+  background-color: #a50000;
+  border-radius: 10px; }
+  .form_opinion h2 {
+    color: white; }
+  .form_opinion label {
+    color: white; }
+  .form_opinion input:focus, .form_opinion select:focus, .form_opinion textarea:focus {
+    box-shadow: none;
+    border: 1px solid black; }
+  .form_opinion textarea:focus {
+    background-color: #e7e6e6; }
+
 .btn_opinion {
-  background-color: white; }
+  background-color: white;
+  border-radius: 10px; }
 
 /*footer*/
 .footer {
@@ -149,15 +172,17 @@ nav div.offcanvas {
   background-color: #161616;
   height: auto; }
   .footer_titulo {
-    text-align: center;
     color: white;
     font-size: 2rem; }
   .footer_container {
     display: flex;
     flex-direction: column;
+    max-width: 1200px;
+    margin: auto;
     gap: 1rem; }
     .footer_container .link_containers:first-child {
       display: flex;
+      align-content: center;
       justify-content: space-around; }
       .footer_container .link_containers:first-child div {
         width: auto;
@@ -189,7 +214,7 @@ nav div.offcanvas {
     border-radius: 1rem;
     transition: background-color 1s, color 1s, box-shadow 0.5s; }
   .footer_img {
-    width: 3vw;
+    width: 4vh;
     display: inline-block; }
   .footer .redes {
     display: flex;
@@ -200,7 +225,6 @@ nav div.offcanvas {
     text-align: center;
     color: white; }
 
-/*mixin*/
 #insta:hover {
   background-color: #E1306C;
   color: white;
