--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -7,7 +7,6 @@
     height: auto;
 
     &_titulo {
-        text-align: center;
         color: $Blanco;
         font-size: 2rem;
     }
@@ -15,10 +14,13 @@
     &_container {
         display: flex;
         flex-direction: column;
+        max-width: 1200px;
+        margin: auto;
         gap: 1rem;
 
         & .link_containers:first-child {
             display: flex;
+            align-content: center;
             justify-content: space-around;
 
             div {
@@ -69,7 +71,7 @@
     }
 
     &_img {
-        width: 3vw;
+        width: 4vh;
         display: inline-block;
     }
 
@@ -86,13 +88,6 @@
         text-align: center;
         color: $Blanco;
     }
-}
-
-/*mixin*/
-@mixin redesHover ($color) {
-    background-color: $color;
-    color: $Blanco;
-    box-shadow: 0px 0px 20px $color;
 }
 
 #insta:hover {
