--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,7 +1,7 @@
 /*Index*/
 #header {
     & img {
-        height: 50vh;
+        max-height: 60vh;
     }
 }
 
@@ -12,8 +12,11 @@
 .container_deli {
     background-color: rgb(224, 84, 42);
     border-radius: 2rem;
+    .card:hover {
+        border: 1px solid rgb(255, 0, 0);
+    }
+    
 }
-
 .maxw_imgD {
     max-width: 30rem;
 
@@ -23,10 +26,3 @@
     }
 }
 
-.border {
-    border: 2px solid $Blanco;
-
-    &:hover {
-        border: 2px solid red;
-    }
-}
