--- a/css/estilos.css
+++ b/css/estilos.css
@@ -25,7 +25,10 @@ nav div.offcanvas {
   justify-content: space-evenly; }
 
 .nav {
-  background: #292929; }
+  background: #292929;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap; }
   .nav .navbar-nav {
     padding: 1rem; }
   .nav-link {
@@ -95,12 +98,22 @@ nav div.offcanvas {
     display: flex;
     justify-content: center; }
 
+.botones {
+  background-color: white;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem; }
+  .botones button {
+    border: 2px solid #a50000;
+    border-radius: 5px; }
+    .botones button:hover {
+      border: 2px solid #c7c7c7; }
+
 .sucursal {
-  background-color: #8d8d8d;
+  background-color: white;
   border-radius: 1rem; }
 
 .maps {
-  max-height: 400px;
   min-height: 300px;
   height: 100%;
   width: 100%; }
