--- a/scss/_sucursal.scss
+++ b/scss/_sucursal.scss
@@ -1,11 +1,22 @@
+.botones{
+    background-color: $Blanco;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    button{
+        border: 2px solid $RojoPrincipal;
+        border-radius: 5px ;
+        &:hover{
+            border: 2px solid rgb(199, 199, 199);
+        }
+    }
+}
 .sucursal {
-    background-color: rgb(141, 141, 141);
+    background-color: $Blanco;
     border-radius: 1rem;
-    
 }
 
 .maps {
-    max-height: 400px;
     min-height: 300px;
     height: 100%;
     width: 100%;
