--- a/scss/_sucursal.scss
+++ b/scss/_sucursal.scss
@@ -1,6 +1,6 @@
 .botones{
-    background-color: $Blanco;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 1rem;
     button{
@@ -12,7 +12,7 @@
     }
 }
 .sucursal {
-    background-color: $Blanco;
+    background-color: rgb(245, 245, 245);
     border-radius: 1rem;
 }
 
