--- a/css/estilos.css
+++ b/css/estilos.css
@@ -255,3 +255,24 @@ nav div.offcanvas {
   background-color: #049125;
   color: white;
   box-shadow: 0px 0px 20px #049125; }
+
+.error404 {
+  background-color: white;
+  background: none; }
+
+.titulo {
+  font-size: 2.5rem; }
+  @media screen and (min-width: 760px) {
+    .titulo {
+      font-size: 3.5rem; } }
+
+.img {
+  height: 100%;
+  width: 100%; }
+
+.respuestas {
+  display: flex;
+  justify-content: center;
+  gap: 2rem; }
+  .respuestas a {
+    text-decoration: none; }
